# SATySFi-texlogo

./: README.md  Satyristes  satysfi-texlogo-doc.opam  satysfi-texlogo.opam
doc/: sample.saty
src/: texlogo.satyh
