opam-version: "2.0"
name: "satysfi-texlogo-doc"
version: "0.1.1"
synopsis: "Document of satysfi-texlogo"
description: """
Document of satysfi-texlogo.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT" # Choose what you want
homepage: "https://github.com/puripuri2100/SATySFi-texlogo"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-texlogo.git"
bug-reports: "https://github.com/puripuri2100/SATySFi-texlogo/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.6" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-texlogo" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-easytable"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "texlogo-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "texlogo-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
