opam-version: "2.0"
name: "satysfi-texlogo"
version: "0.1.1"
synopsis: "TeX-family logos with SATySFi"
description: """
TeX-family logos with SATySFi.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-texlogo"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-texlogo.git"
bug-reports: "https://github.com/puripuri2100/SATySFi-texlogo/issues"
depends: [
  "satysfi" { >= "0.0.3" & < "0.0.6" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "texlogo"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
